# dedupe-rust

./: Cargo.toml  HEIC_HEIF_TESTING.md  README.md  generate_test_heic.rs  heic_test.rs  t.txt  t2.txt  test_heic.rs  test_heic_support.rs
examples/: jpeg_dimensions.rs
src/: dimensions.rs  main.rs
test_heic/: test_heic_simple.rs
test_images/: create_test_image.rs
