[package]
name = "dedupe_rust"
version = "0.1.1"
edition = "2021"

[features]
default = []

[dependencies]
image = { version = "0.25.2", features = ["jpeg", "gif", "bmp", "tiff"], default-features = false }
png = "0.17.10"
walkdir = "2.3.3"
anyhow = "1.0.97"
rayon = "1.10.0"
sha2 = "0.10.7"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
thiserror = "1.0.47"
thousands = "0.2.0"
colored = "2.0.4"
libheif-rs = "2.3.0"
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[profile.release]
debug = false

[[bin]]
name = "generate_test_heic"
path = "generate_test_heic.rs"

[[bin]]
name = "test_heic_support"
path = "test_heic_support.rs"

[[bin]]
name = "heic_test"
path = "heic_test.rs"

[dev-dependencies]
flamegraph = "0.6.9"
